src/other/mico-2.3.12/test/idl/error/case15.idl

/*
 * Reference to z in x::x should not be resolved to y::z
 */

module y {
  typedef short z;
  interface yi {
  };
};

module x {
  interface xi : y::yi {
    z parent();
  };
};
